--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
         "hardevine/shoppingcart": "^3.3",
         "laravel/framework": "^11.0",
         "laravel/tinker": "^2.9",
-        "laravel/ui": "^4.5"
+        "laravel/ui": "^4.5",
+        "spatie/laravel-permission": "*"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
